--- a/tiger-simulator-3d.html
+++ b/tiger-simulator-3d.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
     <title>Tiger Simulator 3d</title>
     <meta name="description" content="Play Tiger Simulator 3d ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
-    <meta name="robots" content="noindex,nofollow" />
+
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -37,7 +37,9 @@
 
   gtag('config', 'G-LSB9RF3MP9');
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6908591112440966"
+     crossorigin="anonymous"></script>
+     
 </head>
 
   <body id="page-top">
