--- a/boxing-random.html
+++ b/boxing-random.html
@@ -39,7 +39,7 @@
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6908591112440966"
      crossorigin="anonymous"></script>
-     
+
 </head>
 
   <body id="page-top">
@@ -142,7 +142,7 @@
 
 <h2>Related Game: Big Shot Boxing and More</h2>
 
-<p>If you're looking for more boxing action, check out Big Shot Boxing. Additionally, explore related games like Basket Random and Volley Random, offering diverse and enjoyable 2-player experiences. These games are perfect for friendly competitions and cooperative play, providing a variety of sports-themed challenges for you and your friends.</p>
+<p>If you're looking for more boxing action, check out <a href='https://bigshotboxing.github.io/'>Big Shot Boxing</a>. Additionally, explore related games like <a href='https://bigshotboxing.github.io/basket-random.html'>Basket Random</a> and Volley Random, offering diverse and enjoyable 2-player experiences. These games are perfect for friendly competitions and cooperative play, providing a variety of sports-themed challenges for you and your friends.</p>
 
 <h2>Healthy Play, Enhanced Reflexes</h2>
 
