--- a/term.html
+++ b/term.html
@@ -127,7 +127,7 @@ These Terms are subject to occasional revision, and if we make any substantial c
 </p> 
 <br />
 <h2>Contact Information</h2>
-Contact us through our email: topvazcontact@gmail.com
+Contact us through our email: tom681999 @gmail.com
 
 
 <br />
