--- a/dmca.html
+++ b/dmca.html
@@ -38,7 +38,7 @@
 				</button>
 				<a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong>	
 									<!-- <img src="/assets/images/topvaz_logo.png" alt="topVAZ Games logo" width="70" height="35"> -->
-				bigshotboxing.github.io
+				Bigshotboxing.github.io
 				</strong> </span></a>
 
 				<div class="navbar-collapse collapse" id="nav-menu">
@@ -101,35 +101,35 @@
                         <h1 class="text-base md:text-lg 2xl:text-xl font-semibold tracking-tight italic">Last Updated: 
                         <!-- -->
                         August 23, 2023</h1>
-                        <p class="pb-4">bigshotboxing.github.io
+                        <p class="pb-4">Bigshotboxing.github.io
                         <!-- -->
                         (the &quot;Site &quot;) respects the intellectual property rights of others and expects its users to do the same. In accordance with the Digital Millennium Copyright Act of 1998, the text of which may be found on the U.S. Copyright Office website at http://www.copyright.gov/legislation/dmca.pdf, and specifically in accordance with 17 USC § 512(c)(3), 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         will respond expeditiously to claims of copyright infringement committed using the 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         service and/or any
                         <!-- -->
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         website (the &quot;Site &quot;) if such claims are reported to 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         &#x27;s Designated Email identified below.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">DMCA Notice of Alleged Infringement (&quot;Notice &quot;)</h1>
                         <p class="pb-4">If you are a copyright owner, authorized to act on behalf of one, or authorized to act under any exclusive right under copyright, please report alleged copyright infringements taking place on or through the Site by completing a DMCA Notice of Alleged Infringement and delivering it to 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         &#x27;s Designated Email. Upon receipt of Notice as described below,
                         <!-- -->
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         will take whatever action, in its sole discretion, it deems appropriate, including removal of the challenged content from the Site. Please note that if you fail to comply with all of the requirements of this section and of 17 USC § 512(c)(3) your DMCA notice may not be valid.</p>
                         <ul class="list-disc list-inside">
@@ -145,7 +145,7 @@
                             <li>Deliver this Notice, with all items completed, to
                             <!-- -->
                             <!-- -->
-                            bigshotboxing.github.io
+                            Bigshotboxing.github.io
                             <!-- -->
                             &#x27;s Designated Email: 
                             <!-- -->
@@ -253,7 +253,7 @@
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			bigshotboxing.github.io			<span class="dsb-panel">
+			Bigshotboxing.github.io			<span class="dsb-panel">
 				<a href="term.html">Term</a> - <a href="dmca.html">DMCA</a> - <a href="policy.html">Policy</a> 			</span>
 		</div>
 	</div>
