--- a/policy.html
+++ b/policy.html
@@ -38,7 +38,7 @@
 				</button>
 				<a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong>	
 									<!-- <img src="/assets/images/topvaz_logo.png" alt="topVAZ Games logo" width="70" height="35"> -->
-				bigshotboxing.github.io
+				Bigshotboxing.github.io
 				</strong> </span></a>
 
 				<div class="navbar-collapse collapse" id="nav-menu">
@@ -103,17 +103,17 @@
                         August 23, 2023</h1>
                         <p class="pb-4">At 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         , accessible from 
                         <!-- -->
                         , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us. This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         . This policy is not applicable to any information collected offline or via channels other than this website.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">Consent</h1>
@@ -131,13 +131,13 @@
                             <li>Find and prevent fraud</li>
                         </ul>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">Log Files</h1>
-                        <p class="pb-4">bigshotboxing.github.io
+                        <p class="pb-4">Bigshotboxing.github.io
                         <!-- -->
                         follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services &#x27;analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users &#x27;movement on the website, and gathering demographic information.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">Cookies and Web Beacons</h1>
                         <p class="pb-4">Like any other website, 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         uses &#x27;cookies &#x27;. These cookies are used to store information including visitors &#x27;preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users &#x27;experience by customizing our web page content based on visitors &#x27;browser type and/or other information.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">Google DoubleClick DART Cookie</h1>
@@ -146,16 +146,16 @@
                         <p class="pb-4">Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on
                         <!-- -->
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         , which are sent directly to users &#x27;browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit. Note that
                         <!-- -->
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         has no access to or control over these cookies that are used by third-party advertisers.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">Third Party Privacy Policies</h1>
-                        <p class="pb-4">bigshotboxing.github.io
+                        <p class="pb-4">Bigshotboxing.github.io
                         <!-- -->
                         &#x27;s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers &#x27;respective websites.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">CCPA Privacy Rights (Do Not Sell My Personal Information)</h1>
@@ -165,7 +165,7 @@
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">Children &#x27;s Information</h1>
                         <p class="pb-4">Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. 
                         <!-- -->
-                        bigshotboxing.github.io
+                        Bigshotboxing.github.io
                         <!-- -->
                         does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
                     </div>
@@ -268,7 +268,7 @@
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			bigshotboxing.github.io			<span class="dsb-panel">
+			Bigshotboxing.github.io			<span class="dsb-panel">
 				<a href="term.html">Term</a> - <a href="dmca.html">DMCA</a> - <a href="policy.html">Policy</a> 			</span>
 		</div>
 	</div>
