--- a/index.html
+++ b/index.html
@@ -131,21 +131,39 @@
 <div class="content-wrapper ">
 
 <div class="row">
-<h1>Experience the Thrill of Big Shot Boxing Game</h1>
 
-<p>Immerse yourself in the digital boxing arena through Big Shot Boxing, an exhilarating online game that empowers you to unleash your boxing prowess directly from the convenience of your Chrome web browser. Whether you're seeking a quick respite or embarking on an exciting challenge, this game offers a captivating and healthful gameplay experience, finely tuned to enhance your reflexes and strategic thinking. Step into the virtual ring, throw punches, and strategize your moves as you navigate through a dynamic and adrenaline-pumping virtual boxing world. With its user-friendly interface and immersive gameplay mechanics, Big Shot Boxing ensures that each jab, hook, and dodge contributes to your skill development while delivering a thoroughly enjoyable and electrifying gaming encounter.</p>
 
-<h2>Game Instructions</h2>
+  <h2>Welcome to Big Shot Boxing!</h1>
+  <p>Experience the thrill of boxing right in your browser, no installation needed. Perfectly compatible with Chromebook computers, this game offers a seamless gaming experience.</p>
+  <p>Step into the ring as a boxer and embark on a career journey like no other. Whether you're a professional or an amateur, you'll have the chance to compete in intense matches and work your way up to claim prestigious titles.</p>
+  <p>What sets Big Shot Boxing apart is its unpredictability. With just one lightning punch from your opponent, victory or defeat can turn on a dime. Get ready for heart-pounding moments as luck and randomness play a role in every match.</p>
+  <p>If you're looking for a quick and exciting way to experience the world of boxing, Big Shot Boxing is the game for you. Put on your gloves, step into the ring, and let the action begin!</p>
 
-<p>Big Shot Boxing offers a simple yet exciting control scheme. Use the <strong>right arrow key</strong> for a swift jab, the <strong>left arrow key</strong> to deliver a powerful cross, and <strong>X</strong> to unleash a knockout uppercut. To defend yourself, press <strong>Z</strong> to block incoming strikes. Master these moves and combine them strategically to dominate your opponents in the ring.</p>
+<h2>Big Shot Boxing Game Guide</h2>
+  <h3>Keyboard Controls</h3>
+  
+    <strong>Right Arrow: Jab</strong>
+    <strong>Left Arrow: Cross</strong>
+    <strong>X: Uppercut</strong>
+    <strong>Z: Block</strong>
+
+  <H3>Note: </h3>
+    <p><em>- When you are knocked out (KO), you must press the <strong>Spacebar</strong> quickly to avoid being counted out by the referee for 10 seconds. Failing to do so will result in forfeiting the match.</em></p>
+    <p><em>- This web version is not compatible with touch screen devices such as Chromebooks; it can only be controlled using a keyboard and mouse.</em></p>
+    <p><em>- Use the jab to move forward and back up your opponent. It doesn't score points and does very little damage</em></p>
+    <p><em>- Use the uppercuts and the cross to score points and damage your opponent. Uppercuts cause the most damage</em></p>
+    <p><em>- Hold the block button down to block punches. Tap the button to move backwards.</em></p>
+
+
+   
+
+
+
+
 
 <h2>Play Distraction-Free</h2>
 
 <p>Say goodbye to interruptions! Big Shot Boxing provides a seamless gaming experience with no ads to disrupt your focus. If you want to immerse yourself fully, simply hit the fullscreen button and enjoy the game without any distractions. This feature ensures that you're completely engaged in the boxing action.</p>
-
-<h2>Optimized for Chromebook Laptops</h2>
-
-<p>Whether you're using a computer or a Chromebook laptop, Big Shot Boxing performs exceptionally well. Access the game through your Chrome browser, and you're ready to showcase your boxing prowess. This compatibility makes it convenient to enjoy the game, connecting with friends and fellow students in the virtual boxing arena.</p>
 
 
 
