--- a/index.html
+++ b/index.html
@@ -163,7 +163,22 @@
 
 <h2>Play Distraction-Free</h2>
 
+
 <p>Say goodbye to interruptions! Big Shot Boxing provides a seamless gaming experience with no ads to disrupt your focus. If you want to immerse yourself fully, simply hit the fullscreen button and enjoy the game without any distractions. This feature ensures that you're completely engaged in the boxing action.</p>
+
+<h2>Unveiling Lesser-Known Information</h2>
+
+        <p>In the world of boxing, unexpected dynamics come into play:</p>
+        <p>- The tide of a match can be turned by the loser with a single, well-timed punch.</br>
+        - Achieving titles at the age of 29 poses significant challenges due to the intense competition.</br>
+        - Boxers typically retire by the age of 46, considering the physical demands of the sport.</br>
+        - The browser version of Big Shot Boxing at Bigshotboxing.github.io differs from the mobile version in several aspects: 
+        On a mobile device, when stunned, you can immediately regain control of the boxer; however, on the browser, there's a brief delay.</br>
+       - Sometimes, despite launching numerous attacks, a match cannot be won due to a single opponent's well-placed strike. This could be due to their resilient chin, an element that you might lack. Random factors also contribute, as the next bout could see you taking down an opponent with your opening punch.</p>
+
+
+   
+
 
 
 
