--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <H3>Note: </h3>
     <p><em>- When you are knocked out (KO), you must press the <strong>Spacebar</strong> quickly to avoid being counted out by the referee for 10 seconds. Failing to do so will result in forfeiting the match.</em></p>
-    <p><em>- This web version is not compatible with touch screen devices such as Chromebooks; it can only be controlled using a keyboard and mouse.</em></p>
+    <p><em>- This web version is not compatible with touch screen devices; it can only be controlled using a keyboard and mouse.</em></p>
     <p><em>- Use the jab to move forward and back up your opponent. It doesn't score points and does very little damage</em></p>
     <p><em>- Use the uppercuts and the cross to score points and damage your opponent. Uppercuts cause the most damage</em></p>
     <p><em>- Hold the block button down to block punches. Tap the button to move backwards.</em></p>
