--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
 <p>Say goodbye to interruptions! Big Shot Boxing provides a seamless gaming experience with no ads to disrupt your focus. If you want to immerse yourself fully, simply hit the fullscreen button and enjoy the game without any distractions. This feature ensures that you're completely engaged in the boxing action.</p>
 
+
 <h2>Unveiling Lesser-Known Information</h2>
 
         <p>In the world of boxing, unexpected dynamics come into play:</p>
@@ -177,10 +178,10 @@
        - Sometimes, despite launching numerous attacks, a match cannot be won due to a single opponent's well-placed strike. This could be due to their resilient chin, an element that you might lack. Random factors also contribute, as the next bout could see you taking down an opponent with your opening punch.</p>
 
 
-   
+ <h2>About the creator: </h2>
 
 
-
+<p>The game, developed by Colin Lane in 2017, is accessible on both the App Store and Google Play under the developer name Brad Erkkila.</p>
 
 
 </div>
