--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong>	
-									<!-- <img src="/assets/images/topvaz_logo.png" alt="topVAZ Games logo" width="70" height="35"> -->
-				Bigshotboxing.github.io
+									<img src="assets/images/logo.png" alt="topVAZ Games logo" width="70" height="30">
+				Big Shot Boxing
 				</strong> </span></a>
 
 
