--- a/term.html
+++ b/term.html
@@ -52,9 +52,18 @@
 					<!-- <a class="nav-link " href="/playroblox">Roblox</a>	 -->
 				</div>
 
-				<div class="d-none d-lg-block" style="padding-left: 10px;">
-					topVAZ Games
-				</div>
+
+        <div class="d-none d-lg-block" style="padding-left: 10px;">
+          <ul class="navbar-nav">
+            <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
+            <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
+            <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
+            <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
+            <li class="nav-item "><a class="nav-link " href="/puzzle">Puzzle</a></li>
+
+    
+          </ul>
+        </div>
 
 
 
