--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
  <h2>About the creator: </h2>
 
 
-<p>The game, developed by Colin Lane in 2017, is accessible on both the App Store and Google Play under the developer name Brad Erkkila.</p>
+<p>The game, developed by Colin Lane in 2017, is accessible on both the <a target="_blank" href='https://apps.apple.com/us/app/big-shot-boxing/id1134721026'>App Store</a> and <a target="_blank" href='https://play.google.com/store/apps/details?id=com.stencyl.bigshotboxing'>Google Play</a> under the developer name Brad Erkkila.</p>
 
 
 </div>
