--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 				<div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://smashkartsonline.github.io/">Smash Karts</a></li>
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://flappybirdgame.github.io/">Flappy Bird</a></li>
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
