--- a/running.html
+++ b/running.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
 		<title>Running games (Fullscreen)</title>
 			<link rel="icon" href="/assets/images/favicon.png" sizes="32x32">
-		<meta name="description" content="Big Shot Boxing: Safe and free kids' game. Step into the ring, no ads. Swing for glory in this exciting boxing simulation. Play now!">
+		<meta name="description" content="Play Running games ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
 		<!-- <link rel="stylesheet" type="text/css" href="assets/css/jquery-comments.css" /> -->
 		<!-- <link rel="stylesheet" type="text/css" href="assets/css/user.css" /> -->
@@ -58,6 +58,7 @@
 				<div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
+            <li class="nav-item "><a class="nav-link " href="/skill.html">Skill</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
             <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
