--- a/idle-lumber-inc.html
+++ b/idle-lumber-inc.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
     <title>Idle Lumber Inc</title>
     <meta name="description" content="Play Idle Lumber Inc ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
-    <meta name="robots" content="noindex,nofollow" />
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -107,8 +106,18 @@
 
       </div>
     </div>
+    <br/>
+ <h3>How to Play</h3>
+  <p>To engage with a specific area, object, or laborer, simply tap or left-click with your mouse.</p>
+
+
   </div>
-</div>
+
+
+
+
+
+
 
 
 
