--- a/power-badminton.html
+++ b/power-badminton.html
@@ -9,8 +9,8 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-    <title>Bubble Trouble 3</title>
-    <meta name="description" content="Play Bubble Trouble 3 ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
+    <title>Power Badminton</title>
+    <meta name="description" content="Play Power Badminton ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
     <meta name="robots" content="noindex,nofollow" />
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
@@ -93,12 +93,12 @@
         <div id="mobile-back-button" draggable="true">
           <i class="bi bi-x-circle-fill"></i>
         </div>
-        <iframe id="game-area" style="width: 840px; height: 560px;" src="https://topvazstore.github.io/g2/bubble-trouble-3" crolling="none" frameborder="0" allowfullscreen></iframe>
+        <iframe id="game-area" style="width: 840px; height: 560px;" src="https://topvazstore.github.io/g6/power-badminton" crolling="none" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="game-info">
       <div class="header-left">
-        <h1 class="single-title">Bubble Trouble 3</h1>
+        <h1 class="single-title">Power Badminton</h1>
       </div>
       <div class="header-right">
         <div class="b-action">            
