--- a/flying-car-simulator.html
+++ b/flying-car-simulator.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
     <title>Flying Car Simulator</title>
     <meta name="description" content="Play Flying Car Simulator ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
-    <meta name="robots" content="noindex,nofollow" />
+
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -48,7 +48,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong> 
-                  <img src="assets/images/logo.png" alt="Big Shot Boxing logo" width="70" height="30">
+                  <!-- <img src="/assets/images/topvaz_logo.png" alt="topVAZ Games logo" width="70" height="35"> -->
         Bigshotboxing.github.io
         </strong> </span></a>
 
@@ -68,6 +68,7 @@
         <div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
+            <li class="nav-item "><a class="nav-link " href="/skill.html">Skill</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
             <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
@@ -107,8 +108,20 @@
 
       </div>
     </div>
-  </div>
-</div>
+
+  <br/>
+ <h3>How to Play</h3>
+<p>Drive - WASD keys</p>
+
+<p>Fly (or land) - F</p>
+
+<p>Brake - Space bar</p>
+
+<p>Nitro - Shift</p>
+
+
+ </div>
+
 
 
 
