--- a/running-fred.html
+++ b/running-fred.html
@@ -48,7 +48,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong> 
-                  <img src="assets/images/logo.png" alt="Big Shot Boxing logo" width="70" height="30">
+                  <!-- <img src="/assets/images/topvaz_logo.png" alt="topVAZ Games logo" width="70" height="35"> -->
         Bigshotboxing.github.io
         </strong> </span></a>
 
@@ -68,6 +68,7 @@
         <div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
+            <li class="nav-item "><a class="nav-link " href="/skill.html">Skill</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
             <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
