--- a/wood-blocks-3d.html
+++ b/wood-blocks-3d.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
     <title>Wood Blocks 3D</title>
     <meta name="description" content="Play Wood Blocks 3D ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
-    <meta name="robots" content="noindex,nofollow" />
+
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -68,6 +68,7 @@
         <div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
+            <li class="nav-item "><a class="nav-link " href="/skill.html">Skill</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
             <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
@@ -107,7 +108,19 @@
 
       </div>
     </div>
+
+
+    <br/>
+ <h3>How to Play</h3>
+  <p>To complete a column or row and score points, drag and drop these elements onto the grid to occupy all of its squares. If you wish to remove or rotate a piece, consider using a power-up.</p>
+
+
+
   </div>
+
+
+
+
 </div>
 
 
