--- a/idle-lumber-inc.html
+++ b/idle-lumber-inc.html
@@ -67,6 +67,7 @@
         <div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
+            <li class="nav-item "><a class="nav-link " href="/skill.html">Skill</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
             <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
