--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         - The browser version of Big Shot Boxing at Bigshotboxing.github.io differs from the mobile version in several aspects: 
         On a mobile device, when stunned, you can immediately regain control of the boxer; however, on the browser, there's a brief delay.</br>
        - Sometimes, despite launching numerous attacks, a match cannot be won due to a single opponent's well-placed strike. This could be due to their resilient chin, an element that you might lack. Random factors also contribute, as the next bout could see you taking down an opponent with your opening punch.</p>
-
+       <p>- The game's pugilist avatars can be traced back to the realm of authentic boxing legends. For instance, in the game, the character Jesus Sanchez pays a distinct tribute to the illustrious Manny Pacquiao, while Gerard Steele emulates the legendary Mike Tyson. Mikkel Nielsen embodies the essence of Ivan Drago, Joseph Kotey captures the spirit of Joshua Clottey, Roddy Savage reflects the persona of Tommy Morrison, and Benny O'Connor channels the energy of Conor McGregor. Additionally, İvan Senchenko mirrors the style of Vasily Lomachenko, creating a roster of characters that pay homage to the giants of the boxing world.</p>
 
  <h2>About the creator: </h2>
 
