--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
   gtag('config', 'G-LSB9RF3MP9');
 </script>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6908591112440966"
-     crossorigin="anonymous"></script>
-     
 
 </head>
 
@@ -60,15 +57,20 @@
 
 				<div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
-<!--             <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://smashkartsonline.github.io/">Smash Karts</a></li>
-            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://flappybirdgame.github.io/">Flappy Bird</a></li> -->
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://soccer-random.github.io/play/monkey-mart.html">Monkey Mart</a></li>
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://soccer-random.github.io/category/sports.html">Sports</a></li>
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://soccer-random.github.io/category/2-player.html">2 Player</a></li>
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://soccer-random.github.io/category/car.html">Car</a></li>
+
+
+<!--             
             <li class="nav-item "><a class="nav-link " href="/popular.html">Popular</a></li>
             <li class="nav-item "><a class="nav-link " href="/skill.html">Skill</a></li>
             <li class="nav-item "><a class="nav-link " href="/sports">Sports</a></li>
             <li class="nav-item "><a class="nav-link " href="/running">Running</a></li>
             <li class="nav-item "><a class="nav-link " href="/car">Car</a></li>
             <li class="nav-item "><a class="nav-link " href="/puzzle">Puzzle</a></li>
-
+ -->
     
           </ul>
 				</div>
