--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<div class="d-none d-lg-block" style="padding-left: 10px;">
           <ul class="navbar-nav">
-            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="Wordle Unlimited">Wordle Unlimited</a></li>
+            <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://wordle-unlimited.github.io/">Wordle Unlimited</a></li>
 
             <li class="nav-item "><a target="_blank" rel="nofollow" class="nav-link " href="https://geometry-dash-online.github.io/">Geometry Dash</a></li>
             <!-- 
