--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 		
-
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LSB9RF3MP9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M3DM6LLDD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LSB9RF3MP9');
+  gtag('config', 'G-5M3DM6LLDD');
 </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7163348179872343"
+     crossorigin="anonymous"></script>
+		
 
 
 </head>
