--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong> 
-                  <img src="assets/images/logo.png" alt="Big Shot Boxing logo" width="70" height="30">
+                  <img src="images/logo.png" alt="Big Shot Boxing logo" width="70" height="30">
         Bigshotboxing.github.io
         </strong> </span></a>
 	
@@ -132,7 +132,7 @@
           				<div id="mobile-back-button" draggable="true">
           					<i class="bi bi-x-circle-fill"></i>
           				</div>
-          				<iframe class="game-iframe" id="game-area" src="gameLink" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen></iframe>
+          				<iframe class="game-iframe" id="game-area" src="https://topvazstore.github.io/g2/big-shot-boxing" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen></iframe>
           			</div>
           		</div>
 
